--- a/src/components/wolfram-ca.module.css
+++ b/src/components/wolfram-ca.module.css
@@ -1,12 +1,20 @@
 .wolframWrapper {
   overflow-y: hidden;
   max-height: 500px;
+  min-height: 500px;
+  min-width: 700px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.notFound {
+  align-self: center;
+  justify-self: center;
+  margin: 0 auto;
 }
 
 .table {
   animation: scroll-up 60s infinite linear;
-  animation-delay: 3s;
+  animation-delay: 1s;
   transform: translateY(500px);
 }
 
