--- a/src/components/wolfram-ca.module.css
+++ b/src/components/wolfram-ca.module.css
@@ -16,6 +16,8 @@
   animation: scroll-up 60s infinite linear;
   animation-delay: 1s;
   transform: translateY(500px);
+  width: 765px;
+  height: 7500px;
 }
 
 @keyframes scroll-up {
@@ -34,13 +36,9 @@
 }
 
 .cell {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 8px;
+  display: block;
   height: 15px;
   width: 15px;
-  border-bottom: none;
 }
 
 .one {
